<?xml version="1.0"?>
<package format="2">
    <name>unitree_lowlevel</name>
    <version>0.0.0</version>
    <description>Unitree lowlevel controller.</description>
    <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>
    <license>BSD</license>

    <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>unitree_go</depend>
    <depend>unitree_api</depend>

    <depend>legged_model</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
